[package]
name = "mcp-ox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
base64 = "0.22.1"
bon = "3.4.0"
chrono = { version = "0.4.40", features = ["serde"] }
mime = "0.3.17"
schemars = "1.0.0-alpha.17"
serde = {version= "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.18.0"
